# clause

./: .gitignore  CLAUDE.md  SPEC.md  clause-ui-design.jsx  package-lock.json  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CenterPanel.tsx  ChatMessage.tsx  Editor.tsx  FileTree.tsx  FloatingToolbar.tsx  LeftPanel.tsx  RightPanel.tsx
src/styles/: globals.css
src/types/: claude.ts
