[package]
name = "clause"
version = "0.1.0"
description = "A writing IDE powered by Claude Code"
authors = ["kyuheejo"]
edition = "2021"

[lib]
name = "clause_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "6.1", default-features = false, features = ["macos_fsevent"] }

